Added additional form types to the navigation bar. Please create pages for those forms and lets allow the user to select the type of 1099 on the 1099 page, so we don't have to have 20 different pages for each type of 1099

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -232,20 +232,20 @@
                         <li class="divider"></li>
                         <% if user_signed_in? %>
                           <li>
-                          <%= link_to( destroy_user_session_path, method: :delete) do %>  
+                          <%= link_to( destroy_user_session_path, method: :delete) do %>
                           <i class="fa fa-sign-out fa-fw"></i> Logout</a>
                           <% end %>
-      
+
                           </li>
                         <% else %>
                           <li>
                           <%= link_to(new_user_session_path) do %>
                           <i class="fa fa-sign-in fa-fw"></i> Login</a>
-                          <% end %>  
+                          <% end %>
                           </li>
                         <% end %>
-                       
-                       
+
+
                     </ul>
                     <!-- /.dropdown-user -->
                 </li>
@@ -275,6 +275,9 @@
                         <li>
                             <a href="#"><i class="fa fa-asterisk fa-fw"></i> Forms<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
+                              <li>
+                                  <a href="/form/show">Form 1042-S</a>
+                              </li>
                                 <li>
                                     <a href="/form/show">Form 1042-S</a>
                                 </li>
@@ -289,7 +292,7 @@
                                 </li>
                             </ul>
                             <!-- /.nav-second-level -->
-                        </li>       
+                        </li>
                     </ul>
                 </div>
                 <!-- /.sidebar-collapse -->
