added the form types this time

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -276,7 +276,7 @@
                             <a href="#"><i class="fa fa-asterisk fa-fw"></i> Forms<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
                               <li>
-                                  <a href="/form/show">Form 1042-S</a>
+                                  <a href="/form/show/1099">Form 1099</a>
                               </li>
                                 <li>
                                     <a href="/form/show">Form 1042-S</a>
@@ -285,10 +285,28 @@
                                     <a href="/form/show/8027">Form 8027</a>
                                 </li>
                                 <li>
+                                    <a href="/form/show/1098">Form 1098</a>
+                                </li>
+                                <li>
+                                    <a href="/form/show/1097">Form 1097</a>
+                                </li>
+                                <li>
                                     <a href="/form/show/3922">Form 3922</a>
                                 </li>
                                 <li>
-                                    <a href="/form/show/fw2g">Form fw2g</a>
+                                    <a href="/form/show/fW2g">Form W-2G</a>
+                                </li>
+                                <li>
+                                    <a href="/form/show/3921">Form 3921</a>
+                                </li>
+                                <li>
+                                    <a href="/form/show/5498">Form 5498</a>
+                                </li>
+                                <li>
+                                    <a href="/form/show/8027">Form 8027</a>
+                                </li>
+                                <li>
+                                    <a href="/form/show/8027">Form 8955-SSA</a>
                                 </li>
                             </ul>
                             <!-- /.nav-second-level -->
