--- a/app/views/forms/_form3922.html.erb
+++ b/app/views/forms/_form3922.html.erb
@@ -2,11 +2,11 @@
 <br/>
             <div class="row">
               <form id="form1" action="/form/save">
-                    <div class="rel col-lg-12">
+                  <div class="rel col-lg-12">
 <!-- Label part -->
                       <div id="label-container">
                         Label:
-                        <%= select_tag(:label, options_for_select(@labels,@form_fields['label']),{id: "label"} )%>
+                        <%= select_tag(:label, options_for_select(@labels,@form_fields['label']),{id: "label", class: "form-control"} )%>
                         <div  id="label-other-container"> Please enter a new label and choose color:&nbsp;&nbsp;
                             <div class="input-group">
                               <input id="label-other"  class ="form-control" type="text" name="label_other" value="">
@@ -27,9 +27,9 @@
                           <div style="background:<%= color[1] %>;<%= @additional_style %>" id="color-<%= color[0].delete(' ') %>" class="color-box"></div>
                           <% end %>
                       </div>
+                    <div class="clear">&nbsp;</div>
 <!-- end label parts -->
-                    </div>
-                    <div class="rel col-lg-12">
+                    <div id="fields-container" class="form3922">
                         <img width="100%" src="/
 media/3922.png" />
                           <input class="abs" style="top: 7%;left: 10%;width: 38%;height: 6%;" type="text" name="corp_name" value="<%= @form_fields['corp_name']%>" placeholder="">
@@ -82,8 +82,8 @@ media/3922.png" />
                           <input type="hidden" name="unique_id" value="<%= @form_fields['unique_id'] %>">
 
 
-                        
                     </div>
+                  </div>
               </form>
             </div>
             <!-- /.row -->
