--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -276,7 +276,7 @@
                             <a href="#"><i class="fa fa-asterisk fa-fw"></i> Forms<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
                               <li>
-                                  <a href="/form/show/1099">Form 1099</a>
+                                  <a href="/form/show/1099a">Form 1099</a>
                               </li>
                                 <li>
                                     <a href="/form/show">Form 1042-S</a>
@@ -306,7 +306,7 @@
                                     <a href="/form/show/8027">Form 8027</a>
                                 </li>
                                 <li>
-                                    <a href="/form/show/8027">Form 8955-SSA</a>
+                                    <a href="/form/show/8955ssa">Form 8955-SSA</a>
                                 </li>
                             </ul>
                             <!-- /.nav-second-level -->
