--- a/app/views/layouts/formedit.html.erb
+++ b/app/views/layouts/formedit.html.erb
@@ -274,7 +274,10 @@
                         </li>
                         <li>
                             <a href="#"><i class="fa fa-asterisk fa-fw"></i> Forms<span class="fa arrow"></span></a>
-                            <ul class="nav nav-second-level">
+                            <ul class="nav nav-second-level collapse in">
+                                <li>
+                                  <a href="/form/show/1099a">Form 1099</a>
+                              </li>
                                 <li>
                                     <a href="/form/show">Form 1042-S</a>
                                 </li>
@@ -282,10 +285,28 @@
                                     <a href="/form/show/8027">Form 8027</a>
                                 </li>
                                 <li>
+                                    <a href="/form/show/1098">Form 1098</a>
+                                </li>
+                                <li>
+                                    <a href="/form/show/1097">Form 1097</a>
+                                </li>
+                                <li>
                                     <a href="/form/show/3922">Form 3922</a>
                                 </li>
                                 <li>
-                                    <a href="/form/show/fw2g">Form fw2g</a>
+                                    <a href="/form/show/fW2g">Form W-2G</a>
+                                </li>
+                                <li>
+                                    <a href="/form/show/3921">Form 3921</a>
+                                </li>
+                                <li>
+                                    <a href="/form/show/5498">Form 5498</a>
+                                </li>
+                                <li>
+                                    <a href="/form/show/8027">Form 8027</a>
+                                </li>
+                                <li>
+                                    <a href="/form/show/8955ssa">Form 8955-SSA</a>
                                 </li>
                             </ul>
                             <!-- /.nav-second-level -->
